--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=https:http://localhost:7000
+VITE_API_BASE_URL=https://backpattry.vercel.app
 
 VITE_AUTH0_DOMAIN=dev-bx3ie5orcjp6sns5.us.auth0.com
 VITE_AUTH0_CLIENT_ID=XvXoPQyuizTolA5lVCtu6eGeYtKdyPbK
