--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=https://backendpurepattry-ly04wtkjz-tejesh-kumars-projects.vercel.app
+VITE_API_BASE_URL=https://backend-nu-seven-50.vercel.app
 VITE_AUTH0_DOMAIN=dev-6p086d5g8gtjtbos.us.auth0.com
 VITE_AUTH0_CLIENT_ID=kKjijHOPoaRuWbicO7qGVOgP3mCfsH7B
 VITE_AUTH0_CALLBACK_URL=https://frontend-purepattry-ncxu-hxx6fh3qt-tejesh-kumars-projects.vercel.app
